--- a/Store/MainWindow.xaml
+++ b/Store/MainWindow.xaml
@@ -9,11 +9,18 @@
     <Window.Resources>
         <ResourceDictionary Source="Style.xaml"/>
     </Window.Resources>
-    <StackPanel Orientation="Vertical">
-        <StackPanel Orientation="Horizontal">
+
+    <DockPanel>
+        
+        <StackPanel DockPanel.Dock="Top"  Orientation="Horizontal">
             <Button Content="Магазин"/>
             <Button Content="Авторизоваться"/>
         </StackPanel>
+        
+          <StackPanel DockPanel.Dock="Bottom"  Orientation="Vertical">
+            <Label Content="Statys:"/>
+        </StackPanel>
+
         <Grid>
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*"/>
@@ -25,16 +32,19 @@
                 <RowDefinition Height="*"/>
                 <RowDefinition Height="*"/>
             </Grid.RowDefinitions>
-            
-            <Image Grid.Row="0" Grid.Column="0" Source="D:\Programming\Store\Store\img\product.jpg"/>
-            <Image Grid.Row="0" Grid.Column="1" Source="D:\Programming\Store\Store\img\product.jpg"/>
-            <Image Grid.Row="0" Grid.Column="2" Source="D:\Programming\Store\Store\img\product.jpg"/>
-            <Image Grid.Row="0" Grid.Column="3" Source="D:\Programming\Store\Store\img\product.jpg"/>
-            
-            <Image Grid.Row="1" Grid.Column="0" Source="D:\Programming\Store\Store\img\product.jpg"/>
-            <Image Grid.Row="1" Grid.Column="1" Source="D:\Programming\Store\Store\img\product.jpg"/>
-            <Image Grid.Row="1" Grid.Column="2" Source="D:\Programming\Store\Store\img\product.jpg"/>
-            <Image Grid.Row="1" Grid.Column="3" Source="D:\Programming\Store\Store\img\product.jpg"/>
+
+            <Image Grid.Row="0" Grid.Column="0" Source="D:\YandexDisk\Академия ШАГ\WPF_Windows Forms\WPF_App\StoreWPF\Store\img\product.jpg"/>
+            <Image Grid.Row="0" Grid.Column="1" Source="D:\YandexDisk\Академия ШАГ\WPF_Windows Forms\WPF_App\StoreWPF\Store\img\product.jpg"/>
+            <Image Grid.Row="0" Grid.Column="2" Source="D:\YandexDisk\Академия ШАГ\WPF_Windows Forms\WPF_App\StoreWPF\Store\img\product.jpg"/>
+            <Image Grid.Row="0" Grid.Column="3" Source="D:\YandexDisk\Академия ШАГ\WPF_Windows Forms\WPF_App\StoreWPF\Store\img\product.jpg"/>
+
+            <Image Grid.Row="1" Grid.Column="0" Source="D:\YandexDisk\Академия ШАГ\WPF_Windows Forms\WPF_App\StoreWPF\Store\img\product.jpg"/>
+            <Image Grid.Row="1" Grid.Column="1" Source="D:\YandexDisk\Академия ШАГ\WPF_Windows Forms\WPF_App\StoreWPF\Store\img\product.jpg"/>
+            <Image Grid.Row="1" Grid.Column="2" Source="D:\YandexDisk\Академия ШАГ\WPF_Windows Forms\WPF_App\StoreWPF\Store\img\product.jpg"/>
+            <Image Grid.Row="1" Grid.Column="3" Source="D:\YandexDisk\Академия ШАГ\WPF_Windows Forms\WPF_App\StoreWPF\Store\img\product.jpg"/>
+
         </Grid>
-    </StackPanel>
+        
+
+    </DockPanel>
 </Window>
