--- a/Store/Style.xaml
+++ b/Store/Style.xaml
@@ -1,4 +1,26 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+        
+    <Style x:Key="Style_bg" TargetType="Control">
+        <Setter Property="Background" Value="Gray"/>
+    </Style>
+
+    <Style TargetType="Button" BasedOn="{StaticResource Style_bg}">
+        <Setter Property="FontSize" Value="16"/>
+        <Setter Property="Margin" Value="10,5"/>
+        <Setter Property="Padding" Value="20,5"/>
+        <Setter Property="Foreground" Value="Gold"/>
+        <Setter Property="Background" Value="Gray"/>
+    </Style>
+
+    <Style TargetType="DockPanel">
+        <Setter Property="Background" Value="Gray"/>
+    </Style>
+    
+    <Style TargetType="Image">
+        <Setter Property="Margin" Value="5"/>
+        <Setter Property="MaxHeight" Value="170"/>
+        <Setter Property="MaxWidth" Value="170"/>
+    </Style>
     
 </ResourceDictionary>
