--- a/Store/MainWindow.xaml
+++ b/Store/MainWindow.xaml
@@ -5,15 +5,18 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Store"
         mc:Ignorable="d"
-        Title="Store" Height="450" Width="800">
+        Title="Store" Height="550" Width="800">
     <Window.Resources>
         <ResourceDictionary Source="Style.xaml"/>
     </Window.Resources>
-    <StackPanel Orientation="Vertical">
-        <StackPanel Orientation="Horizontal">
-            <Button Content="Магазин"/>
-            <Button Content="Авторизоваться"/>
-        </StackPanel>
+    <StackPanel>
+        <Border BorderBrush="Black" BorderThickness="1">
+            <DockPanel>
+                <Button x:Name="Login" Content="Authorize" Margin="0"/>
+                <Button x:Name="Shop" Content="Shop" Margin="0"/>
+                <Image x:Name="Logo" HorizontalAlignment="Right" Width="50" Height="50" Source="C:\Users\ipetr\Downloads\product.jpg" Margin="0"/>
+            </DockPanel>
+        </Border>
         <Grid>
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*"/>
@@ -23,18 +26,26 @@
             </Grid.ColumnDefinitions>
             <Grid.RowDefinitions>
                 <RowDefinition Height="*"/>
+                <RowDefinition Height="0.5*"/>
                 <RowDefinition Height="*"/>
+                <RowDefinition Height="0.5*"/>
             </Grid.RowDefinitions>
-            
-            <Image Grid.Row="0" Grid.Column="0" Source="D:\Programming\Store\Store\img\product.jpg"/>
-            <Image Grid.Row="0" Grid.Column="1" Source="D:\Programming\Store\Store\img\product.jpg"/>
-            <Image Grid.Row="0" Grid.Column="2" Source="D:\Programming\Store\Store\img\product.jpg"/>
-            <Image Grid.Row="0" Grid.Column="3" Source="D:\Programming\Store\Store\img\product.jpg"/>
-            
-            <Image Grid.Row="1" Grid.Column="0" Source="D:\Programming\Store\Store\img\product.jpg"/>
-            <Image Grid.Row="1" Grid.Column="1" Source="D:\Programming\Store\Store\img\product.jpg"/>
-            <Image Grid.Row="1" Grid.Column="2" Source="D:\Programming\Store\Store\img\product.jpg"/>
-            <Image Grid.Row="1" Grid.Column="3" Source="D:\Programming\Store\Store\img\product.jpg"/>
+            <Image Grid.Row="0" Grid.Column="0" Source="C:\Users\ipetr\Downloads\product.jpg"/>
+            <Image Grid.Row="0" Grid.Column="1" Source="C:\Users\ipetr\Downloads\product.jpg"/>
+            <Image Grid.Row="0" Grid.Column="2" Source="C:\Users\ipetr\Downloads\product.jpg"/>
+            <Image Grid.Row="0" Grid.Column="3" Source="C:\Users\ipetr\Downloads\product.jpg"/>
+            <Image Grid.Row="2" Grid.Column="0" Source="C:\Users\ipetr\Downloads\product.jpg"/>
+            <Image Grid.Row="2" Grid.Column="1" Source="C:\Users\ipetr\Downloads\product.jpg"/>
+            <Image Grid.Row="2" Grid.Column="2" Source="C:\Users\ipetr\Downloads\product.jpg"/>
+            <Image Grid.Row="2" Grid.Column="3" Source="C:\Users\ipetr\Downloads\product.jpg"/>
+            <Button Grid.Row="1" Grid.Column="0" Name="Image1" Content="Image1" />
+            <Button Grid.Row="1" Grid.Column="1" Name="Image2" Content="Image2"/>
+            <Button Grid.Row="1" Grid.Column="2" Name="Image3" Content="Image3"/>
+            <Button Grid.Row="1" Grid.Column="3" Name="Image4" Content="Image4"/>
+            <Button Grid.Row="4" Grid.Column="0" Name="Image5" Content="Image5"/>
+            <Button Grid.Row="4" Grid.Column="1" Name="Image6" Content="Image6"/>
+            <Button Grid.Row="4" Grid.Column="2" Name="Image7" Content="Image7"/>
+            <Button Grid.Row="4" Grid.Column="3" Name="Image8" Content="Image8"/>
         </Grid>
     </StackPanel>
 </Window>
