--- a/Store/Style.xaml
+++ b/Store/Style.xaml
@@ -1,4 +1,18 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
-    
+    <Style TargetType="Button">
+        <Setter Property="Background" Value="LightGoldenrodYellow"/>
+        <Setter Property="FontSize" Value="20"/>
+        <Setter Property="Margin" Value="5 0 5 0"/>
+        <Setter Property="FontWeight" Value="Medium"/>
+    </Style>
+    <Style TargetType="StackPanel">
+        <Setter Property="Background" Value="PapayaWhip"/>
+    </Style>
+    <Style TargetType="Image">
+        <Setter Property="Margin" Value="5 10 5 0"/>
+    </Style>
+    <Style TargetType="DockPanel">
+        <Setter Property="Background" Value="Black"/>
+    </Style>
 </ResourceDictionary>
