--- a/Store/MainWindow.xaml
+++ b/Store/MainWindow.xaml
@@ -14,6 +14,7 @@
 
         <StackPanel DockPanel.Dock="Top"  Orientation="Horizontal">
             <Button Content="Магазин"/>
+            <Button x:Name="Button_Basket" Content="Корзина" Click="Button_Basket_Click"/>
             <Button Content="Авторизоваться"/>
         </StackPanel>
 
