--- a/Store/Style.xaml
+++ b/Store/Style.xaml
@@ -1,19 +1,22 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
-    <Style x:Key="Style_Button">
-        <Setter Property="Control.FontFamily" Value="Times New Roman" />
-        <Setter Property="Control.Margin" Value="5" />
-        <Setter Property="ItemsControl.FontSize" Value="18"/>
-        <Setter Property="ItemsControl.Foreground" Value="Black"/>
-        <Setter Property="ItemsControl.Background" Value="White"/>
+    <Style x:Key="Style">
+        <Setter Property="Control.Background" Value="Gray"/>
     </Style>
 
-    <Style x:Key="Style_Grid">
-        <Setter Property="ItemsControl.Background" Value="Gray"/>
+    <Style TargetType="Button" BasedOn="{StaticResource Style}">
+        <Setter Property="FontSize" Value="16"/>
+        <Setter Property="Margin" Value="10,5"/>
+        <Setter Property="Padding" Value="20,5"/>
+        <Setter Property="Foreground" Value="Gold"/>
     </Style>
 
-    <Style x:Key="Style_Image">
-        <Setter Property="ItemsControl.Margin" Value="8"/>
-        <Setter Property="ItemsControl.Padding" Value="8"/>
+    <Style TargetType="DockPanel" BasedOn="{StaticResource Style}">
+    </Style>
+
+    <Style TargetType="Image">
+        <Setter Property="Margin" Value="5"/>
+        <Setter Property="MaxHeight" Value="170"/>
+        <Setter Property="MaxWidth" Value="170"/>
     </Style>
 </ResourceDictionary>
