--- a/Store/WindowBasket.xaml
+++ b/Store/WindowBasket.xaml
@@ -5,16 +5,17 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Store"
         mc:Ignorable="d"
-        Title="WindowBasket" Height="450" Width="800">
+        Title="Basket" Height="450" Width="800">
 
     <Window.Resources>
         <ResourceDictionary Source="Style.xaml"/>
     </Window.Resources>
 
     <DockPanel LastChildFill="True">
-        <DataGrid x:Name="orderGrid" AutoGenerateColumns="True" DockPanel.Dock="Top"></DataGrid>
+        <DataGrid x:Name="DataGrid_Orders" AutoGenerateColumns="True" DockPanel.Dock="Top"/>
+        
         <StackPanel DockPanel.Dock="Bottom" VerticalAlignment="Bottom">
-            <Button Content="Bay"/>
+            <Button x:Name="Button_ClearTableOrders" Content="Bay"/>
             <Button Content="Clear"/>
         </StackPanel>
     </DockPanel>
