--- a/Store/MainWindow.xaml
+++ b/Store/MainWindow.xaml
@@ -11,17 +11,16 @@
     </Window.Resources>
 
     <DockPanel LastChildFill="True">
-        <StackPanel x:Name="Menu" DockPanel.Dock="Top" Orientation="Horizontal">
-            <Button Content="Магазин" />
-            <Button Content="Авторизоваться" />
+        <StackPanel DockPanel.Dock="Top"  Orientation="Horizontal">
+            <Button Content="Магазин"/>
+            <Button x:Name="Button_Basket" Content="Корзина" Click="Button_Basket_Click"/>
+            <Button Content="Авторизоваться"/>
         </StackPanel>
 
         <StackPanel DockPanel.Dock="Bottom" Orientation="Vertical">
-            <Label x:Name="StatusBar" Content="Statys:" />
+            <Label x:Name="Label_StatusBar" Content="Status: " />
         </StackPanel>
 
-        <Grid x:Name="Body">
-            <!-- -->
-        </Grid>
+        <Grid x:Name="Grid_Body"/>
     </DockPanel>
 </Window>
