--- a/Store/Style.xaml
+++ b/Store/Style.xaml
@@ -1,5 +1,6 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+    <!-- ## Общие стили ## -->
     <Style x:Key="Style">
         <Setter Property="Control.Background" Value="Gray"/>
     </Style>
@@ -19,4 +20,11 @@
         <Setter Property="MaxHeight" Value="170"/>
         <Setter Property="MaxWidth" Value="170"/>
     </Style>
+
+    <Style TargetType="Grid">
+        <Setter Property="HorizontalAlignment" Value="Center"/>
+        <Setter Property="VerticalAlignment" Value="Center"/>
+    </Style>
+
+    <!--  -->
 </ResourceDictionary>
