CreateDbConnectionTemplate --add CreateCard --fix Добавлена кнопка генерации шаблона файла подключения к БД. БагаФикс: Теперь путь к картинкам не нужно менять. Определяется путь до программы. Там должна находится папка \img, а в ней контент.

--- a/Store/MainWindow.xaml
+++ b/Store/MainWindow.xaml
@@ -15,6 +15,9 @@
             <Button Content="Магазин"/>
             <Button x:Name="Button_Basket" Content="Корзина" Click="Button_Basket_Click"/>
             <Button Content="Авторизоваться"/>
+            <Button x:Name="Button_CreateDbConnectionTemplate"
+                    Content="Шаблон подключения"
+                    Click="Button_CreateDbConnectionTemplate_Click"/>
         </StackPanel>
 
         <StackPanel DockPanel.Dock="Bottom" Orientation="Vertical">
