--- a/Store/Style.xaml
+++ b/Store/Style.xaml
@@ -13,9 +13,6 @@
         <Setter Property="Foreground" Value="Gold"/>
     </Style>
 
-    <Style TargetType="DockPanel" BasedOn="{StaticResource Style}">
-    </Style>
-    
     <Style TargetType="Image">
         <Setter Property="Margin" Value="5"/>
         <Setter Property="MaxHeight" Value="170"/>
@@ -23,56 +20,83 @@
     </Style>
         
     <!-- Стиль карточки  -->
-    <Style x:Key="TitleProductPole">
-        <Setter Property="ItemsControl.FontSize" Value="18"/>
-        <Setter Property="ItemsControl.Foreground" Value="DarkBlue"/>
-        <Setter Property="ItemsControl.FontWeight" Value="DemiBold"/>
+    <Style x:Key="Style_ProductName" TargetType="TextBlock">
+        <Setter Property="FontSize" Value="18"/>
+        <Setter Property="Foreground" Value="DarkBlue"/>
+        <Setter Property="FontWeight" Value="DemiBold"/>
+        <Setter Property="TextAlignment" Value="Center"/>
+        <Setter Property="Margin" Value="5"/>
+        <Setter Property ="TextWrapping" Value ="Wrap"/>
     </Style>
 
-    <Style x:Key="ArtNumberPole">
-        <Setter Property="ItemsControl.FontSize" Value="14"/>
-        <Setter Property="ItemsControl.FontStyle" Value="Italic"/>
-        <Setter Property="ItemsControl.Foreground" Value="DarkSlateGray"/>
-        <Setter Property="ItemsControl.FontWeight" Value="DemiBold"/>
+    <Style x:Key="Style_ProductArtNumber" TargetType="Label">
+        <Setter Property="HorizontalAlignment" Value="Left"/>
+        <Setter Property="VerticalAlignment" Value="Top"/>
+        <Setter Property="FontSize" Value="14"/>
+        <Setter Property="FontStyle" Value="Italic"/>
+        <Setter Property="Foreground" Value="DarkSlateGray"/>
+        <Setter Property="Background" Value="Coral"/>
+        <Setter Property="Opacity" Value="0.8"/>
+        <Setter Property="FontWeight" Value="DemiBold"/>
     </Style>
 
-    <Style x:Key="PricePole">
-        <Setter Property="ItemsControl.FontSize" Value="18"/>
-        <Setter Property="ItemsControl.FontStyle" Value="Italic"/>
-        <Setter Property="ItemsControl.Foreground" Value="Red"/>
-        <Setter Property="ItemsControl.Background" Value="DarkOrange"/>
-        <Setter Property="ItemsControl.FontWeight" Value="DemiBold"/>
-    </Style>
-    
-    <Style x:Key="WarehausCountPole">
-        <Setter Property="ItemsControl.FontSize" Value="12"/>
-        <Setter Property="ItemsControl.FontStyle" Value="Italic"/>
-        <Setter Property="ItemsControl.Foreground" Value="BlanchedAlmond"/>
-        <Setter Property="ItemsControl.Background" Value="Brown"/>
-        <Setter Property="ItemsControl.FontWeight" Value="DemiBold"/>
+    <Style x:Key="Style_ProductPrice" TargetType="Label">
+        <Setter Property="HorizontalAlignment" Value="Right"/>
+        <Setter Property="VerticalAlignment" Value="Bottom"/>
+        <Setter Property="FontSize" Value="18"/>
+        <Setter Property="FontStyle" Value="Italic"/>
+        <Setter Property="Foreground" Value="Red"/>
+        <Setter Property="Background" Value="DarkOrange"/>
+        <Setter Property="FontWeight" Value="DemiBold"/>
     </Style>
 
-    <Style x:Key="BayKey">
-        <Setter Property="ItemsControl.FontSize" Value="18"/>
-        <Setter Property="ItemsControl.Foreground" Value="Green"/>
-        <Setter Property="ItemsControl.FontWeight" Value="DemiBold"/>
+    <Style x:Key="Stule_ProductAvailable" TargetType="Label">
+        <Setter Property="VerticalAlignment" Value="Bottom"/>
+        <Setter Property="HorizontalAlignment" Value="Left"/>
+        <Setter Property="FontSize" Value="12"/>
+        <Setter Property="FontStyle" Value="Italic"/>
+        <Setter Property="Foreground" Value="BlanchedAlmond"/>
+        <Setter Property="Background" Value="Brown"/>
+        <Setter Property="FontWeight" Value="DemiBold"/>
     </Style>
 
-    <Style x:Key="CountKey">
+    <Style x:Key="Style_ProductAddToCartKey" TargetType="Button">
+        <Setter Property="Margin" Value="80,0,0,0"/>
+        <Setter Property="FontSize" Value="18"/>
+        <Setter Property="Foreground" Value="Green"/>
+        <Setter Property="FontWeight" Value="DemiBold"/>
+    </Style>
+
+    <Style x:Key="Style_ProductCountKey" TargetType="Button">
+        <Setter Property="Width" Value="30"/>
         <Setter Property="ItemsControl.FontSize" Value="18"/>
         <Setter Property="ItemsControl.Foreground" Value="LightCoral"/>
         <Setter Property="ItemsControl.FontWeight" Value="ExtraBold"/>
     </Style>
-    <Style x:Key="CountPole">
+
+    <Style x:Key="Style_ProductCounter" TargetType="TextBox">
+        <Setter Property="Width" Value="45"/>
+        <Setter Property="TextAlignment" Value="Center"/>
+        <Setter Property="HorizontalAlignment" Value="Center"/>
+        <Setter Property="VerticalAlignment" Value="Center"/>
         <Setter Property="ItemsControl.FontSize" Value="18"/>
         <Setter Property="ItemsControl.Foreground" Value="LightCoral"/>
         <Setter Property="ItemsControl.FontWeight" Value="Medium"/>
     </Style>
 
-    <Style x:Key="AnnotationPole">
+    <Style x:Key="Style_ProductAnnotation" TargetType="TextBlock">
+        <Setter Property="VerticalAlignment" Value="Top"/>
+        <Setter Property="Margin" Value="10,0,10,10"/>
+        <Setter Property="TextWrapping" Value="Wrap"/>
         <Setter Property="ItemsControl.FontSize" Value="15"/>
         <Setter Property="ItemsControl.Foreground" Value="Aquamarine"/>
         <Setter Property="ItemsControl.FontWeight" Value="Light"/>
+    </Style>
+
+    <Style x:Key="Style_ProductImage" TargetType="Image">
+        <Setter Property="VerticalAlignment" Value="Top"/>
+        <Setter Property="Width" Value="250"/>
+        <Setter Property="Height" Value="250"/>
     </Style>
 
 </ResourceDictionary>
