--- a/Store/Template_view/Product_Card/Card.xaml
+++ b/Store/Template_view/Product_Card/Card.xaml
@@ -1,26 +1,26 @@
-﻿<UserControl x:Class="Store.Card"
+﻿<UserControl x:Class="Store.Template_view.Product_Card.Card"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:Store"
+             xmlns:local="clr-namespace:Store.Template_view.Product_Card"
              mc:Ignorable="d" 
-             d:DesignHeight="370" d:DesignWidth="400">
+             d:DesignHeight="315" d:DesignWidth="400">
     <UserControl.Resources>
-        <ResourceDictionary Source="Style.xaml"/>
+        <ResourceDictionary Source="..\..\Style.xaml"/>
     </UserControl.Resources>
     <Border
         CornerRadius="5"
         BorderBrush="White"
-        BorderThickness="2"
-        Height="368" Width="398">
+        BorderThickness="1"
+        Height="313" Width="398">
         <StackPanel>
             <TextBlock
                 x:Name="TextBlock_ProductName"
                 Text="{Binding ProductName}"
                 Style="{StaticResource ResourceKey=Style_ProductName}"/>
             <Grid
-                Height="280"
+                Height="230"
                 Margin="5,0">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition/>
